Fix extra space below the first line of new slogan

--- a/www/src/components/slider.css
+++ b/www/src/components/slider.css
@@ -10,7 +10,6 @@
     -webkit-animation: topToBottom 10s linear infinite 0s;
     
 	opacity: 0;
-	overflow: hidden;
 	position: absolute;
 }
 .slidingVertical span:nth-child(2){
